fix spacing on event details in single event sidebar

--- a/web/app/themes/ihc/assets/styles/pages/_events.scss
+++ b/web/app/themes/ihc/assets/styles/pages/_events.scss
@@ -29,13 +29,13 @@
     margin-bottom: 60px;
 
     h3 {
-      margin-bottom: 10px;
+      margin-bottom: 4px;
     }
     p { 
-      margin-bottom:30px;
+      margin-bottom:20px;
     }
     .sponsors {
-      margin-bottom: 30px;
+      margin-bottom: 20px;
       p {
         margin-bottom: 0;
       }
